--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <li>This</li>
       <li>Is an</li>
       <li>Unordered list</li>
+      <li><a href="https://google.com">This is a link to Google!</a></li>
     </ul>
     
   </body>
