--- a/index.html
+++ b/index.html
@@ -2,25 +2,17 @@
   
   <head>
     <title>KONG</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   
   <body>
-    <img src = “https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwiinajqyOjgAhVSHDQIHdv1D5cQjRx6BAgBEAU&url=https%3A%2F%2Ffabiaoqing.com%2Fbiaoqing%2Fdetail%2Fid%2F165182.html&psig=AOvVaw2KJBOhF3edBRqyiFKpdz2p&ust=1551791718270191”>
+    <img src = “https://avatars0.githubusercontent.com/u/48169292?s=400&u=fe2650223fb5b76e04f5e6877e0c491025060f97&v=4”>
     <h1>ning</h1>
     <h2>Hello there, awesome person!</h2>
     <ol>
-      <li>This</li>
-      <li>Is an</li>
-      <li>Ordered list</li>
-      <li><a href="https://github.com">This is a link to GitHub!</a></li>
+      <li><a href="https://google.com">Google</a></li>
+      <li><a href="https://github.com">GitHub</a></li>
     </ol>
-    <ul>
-      <li>This</li>
-      <li>Is an</li>
-      <li>Unordered list</li>
-      <li><a href="https://google.com">This is a link to Google!</a></li>
-    </ul>
-    
   </body>
   
 </html>
