--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   
   <body>
-    <img src = “https://avatars0.githubusercontent.com/u/48169292?s=400&u=fe2650223fb5b76e04f5e6877e0c491025060f97&v=4”>
+    <img src= “https://pic.qqtn.com/up/2018-5/15252271245423063.jpg”>
     <h1>ning</h1>
     <h2>Hello there, awesome person!</h2>
     <ol>
