--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   
   <body>
-    <img src= “https://pic.qqtn.com/up/2018-5/15252271245423063.jpg” width="72" height="48" alt="W3C web site">
+    <img src= “https://pic.qqtn.com/up/2018-5/15252271245423063.jpg” alt="" width="400" height="400" >
     <h1>ning</h1>
     <h2>Hello there, awesome person!</h2>
     <ol>
