--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   
   <body>
-    <img src= “https://pic.qqtn.com/up/2018-5/15252271245423063.jpg” alt="" width="100" height="100" >
+    <img src= “1.jpeg” alt="" width="100" height="100" >
     <h1>ning</h1>
     <h2>Hello there, awesome person!</h2>
     <ol>
