--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <body>
     <img src= “1.jpg” alt="" width="100" height="100" >
-    <h1>ning</h1>
+    <h1>KING</h1>
     <h2>Hello there, awesome person!</h2>
     <ol>
       <li><a href="https://google.com">Google</a></li>
